added cat image and view more elements

--- a/test latihan.html
+++ b/test latihan.html
@@ -1,3 +1,15 @@
-<h1> hey I'm a big heading</h1>
-<p>hey i'm a paragraph elemt, cool huh</p>
-<a href="https://google.com" target="_blank" title="Let's go to google">click me! im a link</a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Test latihan</title>
+    </head>
+        <body>
+        <h1> hey I'm a big heading</h1>
+        <p>hey i'm a <b>paragraph</b> elemt, cool huh</p>
+        <a href="https://google.com" target="_blank" title="Let's go to google">click me! im a link</a>
+        <p>My name is :<br>
+        Kitty cat</p>
+        <img src="img/cat.jpeg">
+        </body>
+</html>
+    
