--- a/test latihan.html
+++ b/test latihan.html
@@ -4,7 +4,7 @@
         <title>Test latihan</title>
     </head>
         <body>
-        <h1> hey I'm a big heading</h1>
+        <h1> hey I'm a big heading, L</h1>
         <p>hey i'm a <b>paragraph</b> elemt, cool huh</p>
         <a href="https://google.com" target="_blank" title="Let's go to google">click me! im a link</a>
         <p>My name is :<br>
