--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Edward Apriandy</title>
 	<link rel="icon" href="img/edward-avatar.JPG">
+	<link rel="stylesheet" type="text/css" href="css/portfolio.css">
 </head>
 <body>
 	<!-- header element -->
